tests/baselines/reference/moduleAugmentationExtendFileModule2.errors.txt
main.ts(5,9): error TS2454: Variable 'x' is used before being assigned.


==== map.ts (0 errors) ====
    import { Observable } from "./observable"
    
    (<any>Observable.prototype).map = function() { }
    
    declare module "./observable" {
        interface Observable<T> {
            map<U>(proj: (e:T) => U): Observable<U>
        }
        namespace Observable {
            let someAnotherValue: string;
        }
    }
    
==== observable.ts (0 errors) ====
    export declare class Observable<T> {
        filter(pred: (e:T) => boolean): Observable<T>;
    }
    
    export namespace Observable {
        export let someValue: number;
    }
    
    
==== main.ts (1 errors) ====
    import { Observable } from "./observable"
    import "./map";
    
    let x: Observable<number>;
    let y = x.map(x => x + 1);
            ~
!!! error TS2454: Variable 'x' is used before being assigned.
    let z1 = Observable.someValue.toFixed();
    let z2 = Observable.someAnotherValue.toLowerCase();